--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <tr>
                 <td>C LANGUAGE ⭐⭐⭐</td>
                 
-                <td>JAVA LANGUAGE ⭐⭐⭐ </td>
+                <td>JAVA LANGUAGE ⭐⭐ </td>
                 </tr>
                 <tr>
                     <td>C++ LANGUAGE ⭐⭐⭐⭐</td>
@@ -47,8 +47,9 @@
             <li>COMPETETIVE CODING <em>(intermediate)</em></li>
             <li>FULL STACK WEB DEVELOPER <em>(Beginner)</em></li>
             <li>ANDROID DEVELOPMENT <EM>(Beginner)</EM></li>
+            <li>Google Cloud</li>
             <li>AMAZON AWS</li>
-            <li>MICROSOFT AZURE</li>
+            
         </ol>
         <hr size="3"noshade>
         <h2>Contact Me</h2>
